--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,10 @@ a {
   text-decoration: none;
 }
 
+.sunday {
+  border: 1px solid red;
+}
+
 .links {
   border-left: 15px solid var(--color-363740);
   color: var(--color-A4A6B3);
@@ -206,7 +210,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 /* Card component */
 .card {
-  border: 1px solid ;
+  border: none;
   flex: 1;
   padding: 24px 32px;
   justify-content: center;
@@ -311,4 +315,83 @@ h1, h2, h3, h4, h5, h6, p {
 }
 /* Ticket page ends here */
 
+/* @media rules */
+@media screen and (max-width: 619px) {
+
+  .layout-wrapper {
+    margin: 60px 0 0;
+    padding: 0;
+  }
+
+.header-wrapper, 
+.overview-wrapper,
+.sheet-wrapper,
+.ticket-wrapper,
+.main-wrapper{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+  .details-hide, .sidebar-hide {
+    display: none;
+  }
+
+  .overview-wrapper {
+    width: 100%;
+    margin-top: 10px;
+  }
+  
+  .option-scroll {
+    width: auto;
+    height: 120px;
+    padding: 5px;
+    gap: 8px;
+    overflow-x: scroll;
+  }
+
+  .option-scroll .card {
+    width: fit-content!important;
+    height: 110px!important;
+  }
+
+  .chart-height {
+    height: 270px!important;
+  }
+
+  .summary-wrapper > div {
+    width: 100%;
+    gap: 16px;
+    margin: 0 4px;
+    box-sizing: border-box;
+  }
+
+  .sheet-wrapper div.col-12 {
+    width: 100%;
+    flex-direction: column;
+    margin: 0 4px;
+  }
+
+  .sheet-wrapper .vertical-divider {
+    display: none;
+  }
+
+  .chart {
+    margin: 5px!important;
+    margin-top: 16px!important;
+  }
+
+  .chart-data .horizontal-divider {
+    width: 25%!important;
+    margin: 0 auto;
+  }
+
+}
+
+@media screen and (min-width: 620px) {
+  .nav-hide {
+    display: none;
+  }
+}
+/* @media rules end here */
 
